tests/samples/negative/control_flow/for_condition_bool.ax
module for_condition_bool;

fn main() -> i32 {
    for var i: i32 = 0; i; i = i + 1 {
        return i;
    }
    return 0;
}
